# DEN-Translations

./: .gitignore  Cargo.toml  DEN Maps_ Brazilian Portuguese.csv  DEN Maps_ Chinese (Simplified).csv  DEN Maps_ Chinese (Traditional).csv  DEN Maps_ English.csv  DEN Maps_ French.csv  DEN Maps_ German.csv  DEN Maps_ Italian.csv  DEN Maps_ Japanese.csv  DEN Maps_ Korean.csv  DEN Maps_ Polish.csv  DEN Maps_ Russian.csv  DEN Maps_ Spanish (EU).csv  DEN Maps_ Spanish (Latin).csv  DEN Maps_ Thai.csv  build.rs
data/: arabic.toml  brazilian_portuguese.toml  chinese_simplified.toml  chinese_traditional.toml  english.toml  french.toml  german.toml  italian.toml  japanese.toml  korean.toml  polish.toml  russian.toml  spanish_eu.toml  spanish_latin.toml  thai.toml
src/: lib.rs  translation.rs
