[package]
name = "den_translations"
version = "0.1.0"
edition = "2024"

[dependencies]

[build-dependencies]
toml = "0.9.8"
quote = "1.0.41"
proc-macro2 = "1.0.103"
prettyplease = "0.2.37"

[build-dependencies.syn]
version = "2.0.108"
features = ["full"]

[build-dependencies.serde]
version = "1.0.228"
features = ["derive"]

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = 3
panic = "abort"
strip = true
